# protocol-v2

./: .coderabbit.yaml  .env  .env.example  .eslintrc.js  .eslintrc.json  .gitignore  .gitmodules  .mocharc.yml  .prettierrc.js  .verified-build.json  AUDIT.md  Anchor.toml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  SECURITY.md  buff.json  bun.lockb  codecov.yml  localnet.sh  package.json  pee.txt  piss.json  rust-toolchain.toml  swap-test.csv  tsconfig.json  typedoc.json
programs/archive/: Cargo.toml
programs/archive/src/: lib.rs  state.rs
programs/archive/src/instructions/: archive_user.rs  mod.rs  unarchive_user.rs
programs/clearing_house/: Cargo.toml
programs/clearing_house/src/: account.rs  account_loader.rs  bn.rs  constants.rs  context.rs  curve.rs  error.rs  funding.rs  history.rs  ids.rs  instructions.rs  lib.rs  macros.rs  margin_validation.rs  market.rs  optional_accounts.rs  order_validation.rs  settlement_ratios.rs  signer.rs  test_utils.rs  trade.rs  trade_execution.rs  user.rs  user_initialization.rs
programs/clearing_house/src/account/: markets.rs  mod.rs
programs/clearing_house/src/controller/: amm.rs  bank_balance.rs  funding.rs  insurance.rs  liquidation.rs  lp.rs  mod.rs  orders.rs  pda.rs  pnl.rs  position.rs  repeg.rs  serum.rs  spot_balance.rs  spot_position.rs  token.rs  user_bank_balance.rs  validate.rs
programs/clearing_house/src/instructions/: admin.rs  constraints.rs  if_staker.rs  keeper.rs  mod.rs  optional_accounts.rs  user.rs
programs/clearing_house/src/math/: amm.rs  amm_jit.rs  amm_spread.rs  auction.rs  bank_balance.rs  bankruptcy.rs  base_asset_amount.rs  bn.rs  casting.rs  ceil_div.rs  collateral.rs  constants.rs  cp_curve.rs  curve.rs  fees.rs  fulfillment.rs  funding.rs  helpers.rs  insurance.rs  liquidation.rs  lp.rs  margin.rs  matching.rs  mod.rs  oracle.rs  orders.rs  pnl.rs  position.rs  quote_asset.rs  repeg.rs  safe_math.rs  serum.rs  slippage.rs  spot_balance.rs  spot_withdraw.rs  stats.rs  withdrawal.rs
programs/clearing_house/src/state/: bank.rs  bank_map.rs  events.rs  fees.rs  fulfillment.rs  history.rs  insurance_fund_stake.rs  market.rs  market_map.rs  mod.rs  oracle.rs  oracle_map.rs  order_state.rs  perp_market.rs  perp_market_map.rs  serum.rs  settlement.rs  spot_market.rs  spot_market_map.rs  state.rs  user.rs  user_orders.rs
programs/clearing_house/src/tests/: utils.rs
programs/clearing_house/src/validation/: fee_structure.rs  margin.rs  market.rs  mod.rs  order.rs  perp_market.rs  position.rs  spot_market.rs  user.rs  whitelist.rs
programs/clearing_house/tests/controller/: amm.rs  amm_jit.rs  delisting.rs  insurance.rs  liquidation.rs  lp.rs  orders.rs  pnl.rs  position.rs  spot_balance.rs  spot_position.rs
programs/clearing_house/tests/math/: amm.rs  amm_spread.rs  bankruptcy.rs  cp_curve.rs  funding.rs  helpers.rs  liquidation.rs  margin.rs  matching.rs  serum.rs
programs/clearing_house/tests/state/: user.rs
programs/clearing_house/tests/utils/: mod.rs
programs/drift/: Cargo.toml
programs/drift/docs/: prop_amm_tx_size.md
programs/drift/fuzz/: Cargo.toml
programs/drift/fuzz/fuzz_targets/: fuzz_target_1.rs  fuzz_target_2.rs
programs/drift/src/: SECURITY.md  context.rs  error.rs  ids.rs  lib.rs  macros.rs  optional_accounts.rs  signer.rs  test_utils.rs
programs/drift/src/controller/: amm.rs  archive.rs  builder.rs  funding.rs  insurance.rs  isolated_position.rs  liquidation.rs  lp.rs  mod.rs  orders.rs  pda.rs  phoenix.rs  pnl.rs  position.rs  print_trades.rs  repeg.rs  revenue_share.rs  scale_orders.rs  serum.rs  spot_balance.rs  spot_position.rs  token.rs  validate.rs
programs/drift/src/instructions/: admin.rs  admin_election.rs  constraints.rs  if_staker.rs  keeper.rs  lp_admin.rs  lp_pool.rs  mod.rs  (+9 more)
programs/jit-proxy/: Cargo.toml
programs/jit-proxy/src/: lib.rs
programs/midprice_pino/: Cargo.toml  README.md
programs/midprice_pino/src/: lib.rs
programs/mock_usdc_faucet/: Cargo.toml
programs/mock_usdc_faucet/src/: lib.rs
programs/openbook_v2/: Cargo.toml  README.md
programs/openbook_v2/examples/: place_take_order.rs
programs/openbook_v2/src/: account.rs  constants.rs  context.rs  lib.rs
programs/openbook_v2/tests/: bid_and_ask_test.rs  drift_utils.rs  integration.rs  market.rs  ooa.rs  program.rs  pyth_utils.rs  token.rs  utils.rs
programs/pyth/: Cargo.toml
programs/pyth-lazer/: Cargo.toml
programs/pyth-lazer/src/: api.rs  binary_update.rs  dynamic_value.rs  feed_kind.rs  jrpc.rs  lib.rs  message.rs  payload.rs  price.rs  publisher.rs  rate.rs  serde_price_as_i64.rs  serde_str.rs  signature.rs  storage.rs  subscription.rs  symbol_state.rs  time.rs
programs/pyth/src/: lib.rs  pc.rs
programs/pyth_pull/: Cargo.toml
programs/pyth_pull/src/: lib.rs
programs/switchboard/: Cargo.toml
programs/switchboard-on-demand/: .gitignore  Cargo.toml  DOCS.md  MERGE_COMPLETE.md  MIGRATION.md  README.md  firebase.json  package.json  rustfmt.toml
programs/switchboard-on-demand/scripts/: compile_docs.ts
programs/switchboard-on-demand/src/: account_info_compat.rs  accounts.rs  anchor_traits.rs  decimal.rs  instruction_compat.rs  instructions.rs  lib.rs  macros.rs  prelude.rs  program_id.rs  smallvec.rs  solana_compat.rs  test_ids.rs  types.rs  utils.rs  v2_client_compat.rs
programs/switchboard/src/: lib.rs
programs/token_faucet/: Cargo.toml
programs/token_faucet/src/: lib.rs
propamm-sdk/crates/propamm-sdk/: Cargo.toml
propamm-sdk/examples/maker-bot/: Cargo.toml
sdk-rs/: .env.example  .rustfmt.toml  Cargo.toml  README.md
sdk-rs/examples/: drift_client.rs  load_all_users.rs  load_dlob_from_users.rs  parse_logs.rs  read_account_state.rs
sdk-rs/res/: 9Jtc.hex
sdk-rs/src/: async_utils.rs  auction_subscriber.rs  config.rs  constants.rs  dlob.rs  drift_client.rs  event_emitter.rs  event_subscriber.rs  lib.rs  liquidation.rs  macros.rs  memcmp.rs  polling_drift_client_account_subscriber.rs  slot_subscriber.rs  types.rs  utils.rs  websocket_drift_client_account_subscriber.rs  websocket_program_account_subscriber.rs
sdk-rs/tests/: integration.rs
(+1728 files in other folders)
