[package]
name = "drift-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-lang = "0.27.0"
drift-program = { package = "drift", path = "../programs/drift" }
futures-util = "0.3.29"
reqwest = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
solana-account-decoder = "1.14"
solana-client = "1.14"
solana-sdk = "1.14"
substreams-solana-macro = "0.11.1"
thiserror = "1.0.38"
tokio = { version = "1.34.0", features = ["full"] }

[dev-dependencies]
hex = "*"
hex-literal = "*"
serde_json = "*"
