[package]
name = "clearing-house"
version = "1.0.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "clearing_house"

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]
mainnet-beta=[]

[dependencies]
anchor-lang = "0.19.0"
solana-program = "1.8.0"
spl-token = { version="3.1.1", features = [ "no-entrypoint" ] }
anchor-spl = "0.19.0"
pyth-client = "0.2.2"
bytemuck = { version = "1.4.0" }
borsh = "0.9.1"
num-traits = "0.2"
uint = { version = "0.9.1", default-features = false }
num-derive = "0.3"
thiserror = "1.0"