[package]
name = "clearing-house"
version = "1.0.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "clearing_house"
path = "src/lib.rs"

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]
mainnet-beta=[]

[dependencies]
anchor-lang = "0.25.0"
solana-program = "1.10.29"
anchor-spl = "0.25.0"
pyth-client = "0.2.2"
bytemuck = { version = "1.4.0", features = [ "extern_crate_alloc" ] }
borsh = "0.9.1"
num-traits = "0.2"
uint = { version = "0.9.1", default-features = false }
num-derive = "0.3"
thiserror = "1.0"
num-integer = "0.1.44"
switchboard-v2 = "0.1.10"
arrayref = "0.3.6"
base64 = "0.13.0"
serum_dex = { git = "https://github.com/project-serum/serum-dex", rev = "85b4f14", version = "0.5.6", features = ["no-entrypoint"] }

[dev-dependencies]
bytes = "1.2.0"
pyth = { path = "../pyth" }