[package]
name = "drift"
version = "2.31.1-beta.14"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "drift"
path = "src/lib.rs"

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]
mainnet-beta=[]
default=["mainnet-beta"]

[dependencies]
# forked version of anchor 0.26.0 with support for large idl
anchor-lang = { git = "https://github.com/drift-labs/anchor.git", rev = "ed950fe", version = "0.26.0" }
solana-program = "1.13.7"
anchor-spl = { git = "https://github.com/drift-labs/anchor.git", rev = "ed950fe", version = "0.26.0" }
pyth-client = "0.2.2"
bytemuck = { version = "1.4.0" }
borsh = "0.9.1"
num-traits = "0.2"
uint = { version = "0.9.1", default-features = false }
num-derive = "0.3"
thiserror = "1.0"
num-integer = "0.1.44"
arrayref = "0.3.6"
base64 = "0.13.0"
serum_dex = { git = "https://github.com/project-serum/serum-dex", rev = "85b4f14", version = "0.5.6", features = ["no-entrypoint"] }
enumflags2 = "0.6.4"
phoenix-v1 = { version = "0.2.3", features = ["no-entrypoint"] }
solana-security-txt = "1.1.0"

[dev-dependencies]
bytes = "1.2.0"
pyth = { path = "../pyth", features = ["no-entrypoint"]}
