[package]
name = "drift"
version = "2.48.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "drift"
path = "src/lib.rs"

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]
mainnet-beta=[]
default=["mainnet-beta"]
sdk=["default", "serde"]

[dependencies]
anchor-lang = "0.27.0"
solana-program = "=1.14.16"
anchor-spl = "0.27.0"
pyth-client = "0.2.2"
bytemuck = { version = "1.4.0" }
borsh = "0.9.1"
num-traits = "0.2"
uint = { version = "0.9.1", default-features = false }
num-derive = "0.3"
thiserror = "1.0"
num-integer = "0.1.44"
arrayref = "0.3.6"
base64 = "0.13.0"
serum_dex = { git = "https://github.com/project-serum/serum-dex", rev = "85b4f14", version = "0.5.6", features = ["no-entrypoint"] }
enumflags2 = "0.6.4"
phoenix-v1 = { git = "https://github.com/drift-labs/phoenix-v1", rev = "4c65c9", version = "0.2.4", features = ["no-entrypoint"] }
solana-security-txt = "1.1.0"
serde = { version = "*", features = ["derive"], optional = true }

[dev-dependencies]
bytes = "1.2.0"
pyth = { path = "../pyth", features = ["no-entrypoint"]}
base64 = "0.13.0"
