[package]
name = "drift"
version = "2.150.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "drift"
path = "src/lib.rs"

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]
mainnet-beta =[]
anchor-test = []
default = ["mainnet-beta", "no-entrypoint"]
drift-rs = []
idl-build = [
  "anchor-lang/idl-build",
  "anchor-spl/idl-build",
  "openbook-v2-light/idl-build",
  "switchboard-on-demand/idl-build",
  "pythnet-sdk/idl-build"
]

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = { version = "0.32.1", features = ["idl-build"] }
solana-program = "=2.2.1"
pyth-client = "0.2.2"
pyth-lazer-solana-contract = { git = "https://github.com/jordy25519/pyth-crosschain", features = ["no-entrypoint"]}
pyth-solana-receiver-sdk = { git = "https://github.com/jordy25519/pyth-crosschain" }
pythnet-sdk = { git = "https://github.com/jordy25519/pyth-crosschain" }
bytemuck = "1.4.0"
hex = "0.4.3"
uint = { version = "0.9.1", default-features = false }
num-integer = "0.1.44"
num-traits = "0.2"
arrayref = "0.3.6"
base64 = "0.13.0"
serum_dex = { git = "https://github.com/drift-labs/serum-dex", branch = "master", features = ["no-entrypoint"] }
enumflags2 = "0.6.4"
phoenix-v1 = { git = "https://github.com/jordy25519/phoenix-v1", branch = "master", features = ["no-entrypoint"] }
solana-security-txt = "1.1.0"
static_assertions = "1.1.0"
drift-macros = { git = "https://github.com/drift-labs/drift-macros", rev = "f48c4c77" }
switchboard = { path = "../switchboard", features = ["no-entrypoint"] }
openbook-v2-light = { path = "../openbook_v2", features = ["no-entrypoint"] }
switchboard-on-demand = { path = "../switchboard-on-demand", features = ["no-entrypoint"] }
byteorder = "1.4.3"
proc-macro2 = { version = "1.0.103", features = ["span-locations"] }

[dev-dependencies]
bytes = "1.2.0"
pyth = { path = "../pyth", features = ["no-entrypoint"]}
base64 = "0.13.0"
