[package]
name = "jit-proxy"
version = "0.9.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "jit_proxy"

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { git = "https://github.com/drift-labs/anchor.git", rev = "ed950fe", version = "0.26.0" }
anchor-spl = { git = "https://github.com/drift-labs/anchor.git", rev = "ed950fe", version = "0.26.0" }
drift = { git = "https://github.com/drift-labs/protocol-v2.git", rev = "099cbca", features = ["cpi", "mainnet-beta"]}
bytemuck = { version = "1.4.0" }
static_assertions = "1.1.0"
