[package]
name = "midprice_pino"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "midprice_pino"

[dependencies]
pinocchio = "0.10.2"
pinocchio-log = "0.5"
midprice_book_view = { path = "../../crates/midprice_book_view" }
solana-pubkey = { version = "4", default-features = false }
