[package]
name = "openbook-v2-light"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
#crate-type = ["cdylib", "lib"]
name = "openbook_v2_light"
path = "src/lib.rs"

[features]
default = ["cpi"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]


[dependencies]
anchor-lang = {  version = "0.29.0", features = ["derive"] }
borsh = {version = "0.10.3", features = ["const-generics", "default"]}
bytemuck = {  version = "1.4.0" , features = ["derive", "min_const_generics"]}

[dev-dependencies]
anyhow = "1.0.70"
solana-sdk = "1.16"
solana-program-test = "1.16"
solana-program = "1.16"
spl-associated-token-account = "1.1.3"
spl-token = "3.5.0"
drift = {path = "../drift"}
pyth = {path = "../pyth"}