[package]
name = "pyth_lazer"
version = "0.1.0"
description = "Pyth Lazer types and verification utilities"
edition = "2021"

[lib]
crate-type = ["lib"]

[features]
default = []
no-entrypoint = []
# Enable when building the pyth-lazer program binary; leave off when using as a library (e.g. from drift)
program = []

[dependencies]
anchor-lang = "0.29.0"
bytemuck = { version = "1.4.0" }
solana-program = "1.16"
byteorder = "1.4.3"
anyhow = "1.0.70"
serde = { version = "1.0.143", features = ["derive"] }
derive_more = { version = "0.99.18", features = ["from", "into"] }
itertools = "0.13.0"
rust_decimal = "1.36.0"
chrono = "0.4.44"
humantime-serde = "1.1.1"
thiserror = "1.0.30"
hex = "0.4.3"
serde_json = "=1.0.143"
humantime = "2.3.0"
strum = { version = "0.27.2", features = ["derive"] }
