[package]
name = "pyth"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "pyth"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = ["mainnet-beta"]
mainnet-beta=[]
anchor-test= []
idl-build = [
  "anchor-lang/idl-build"
]

[dependencies]
anchor-lang = "0.32.1"
bytemuck = "1.4.0"
