[package]
name = "pyth_pull"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "pyth_pull"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = ["mainnet-beta"]
mainnet-beta=[]
anchor-test= []

[dependencies]
anchor-lang = "0.29.0"
bytemuck = { version = "1.4.0" }

[dev-dependencies]
base64 = "0.13.0"