[package]
name = "token-faucet"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "token_faucet"

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]
mainnet-beta=[]
anchor-test= []

[dependencies]
anchor-lang = "0.27.0"
solana-program = "1.14.9"
anchor-spl = "0.27.0"
bytemuck = { version = "1.4.0" }