[package]
name = "token-faucet"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "token_faucet"

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]
mainnet-beta=[]
anchor-test= []
[dependencies]

anchor-lang = { version = "0.32.1", features = ["idl-build"] }
anchor-spl = { version = "0.32.1", features = [] }
bytemuck = { version = "1.4.0" }