[package]
name = "token-faucet"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "token_faucet"

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]
mainnet-beta = []
anchor-test = []
idl-build = [
  "anchor-lang/idl-build",
  "anchor-spl/idl-build",
]

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
bytemuck = "1.4.0"