[package]
name = "propamm-sdk"
version = "0.1.0"
edition = "2021"
description = "Rust SDK for quoting on Drift's PropAMM (midprice_pino) system"

[dependencies]
midprice_book_view = { path = "../../../crates/midprice_book_view" }
solana-pubkey = { version = "3", features = ["std"] }
solana-keypair = "3"
solana-signer = "3"
solana-instruction = "3"
solana-transaction = "3"
solana-commitment-config = "3"
solana-signature = "3"
solana-system-interface = "3"
solana-sysvar = "3"
solana-rpc-client = "3"
solana-rpc-client-api = "3"
solana-account-decoder = "3"
solana-pubsub-client = "3"
sha2 = "0.10"
thiserror = "2"
log = "0.4"
tokio = { version = "1", features = ["rt", "time"] }
futures-util = "0.3"
