[package]
name = "maker-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
propamm-sdk = { path = "../../crates/propamm-sdk" }
solana-pubkey = "3"
solana-keypair = "3"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive", "env"] }
env_logger = "0.11"
log = "0.4"
